deps/v8/test/message/fail/undefined-keyed-number-property.out
# Copyright 2021 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

*%(basename)s:6: TypeError: Cannot read properties of undefined (reading '4711')
x[4711];
 ^
TypeError: Cannot read properties of undefined (reading '4711')
    at *%(basename)s:6:2
